--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "type-check": "echo 'type-check'",
     "test": "echo 'test'",
     "clean": "rm -rf dist",
-    "build": "node ./scripts/build.js",
-    "build:prod": "NODE_ENV=production node ./scripts/build.js"
+    "build": "yarn clean && node ./scripts/build.js",
+    "build:prod": "NODE_ENV=production yarn build"
   },
   "dependencies": {
-    "esbuild": "^0.11.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
+  },
+  "devDependencies": {
+    "esbuild": "^0.11.5"
   }
 }
