:arrow_up: [Yarn] Upgrade to Yarn v2

--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,21 @@ node_modules/
 
 # Output of 'npm pack'
 *.tgz
+
+# Yarn Zero-Installs
+# .yarn/*
+# !.yarn/cache
+# !.yarn/patches
+# !.yarn/plugins
+# !.yarn/releases
+# !.yarn/sdks
+# !.yarn/versions
+
+# Yarn Non-Zero
+.yarn/*
+!.yarn/patches
+!.yarn/releases
+!.yarn/plugins
+!.yarn/sdks
+!.yarn/versions
+.pnp.*
